<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="hello">Hello World</string>
    <string name="app_name">CatchVifyoucan</string>
    <string name="user_title">Insert your information please</string>
    <string name="user_role_investigator">Investigator</string>
    <string name="user_role_escapee">Fugitive</string>
    <string name="user_name">Name:</string>
    <string name="user_name_hint">Insert your name (only letters allowed)</string>
    <string name="user_email">E-Mail:</string>
    <string name="user_email_hint">Insert your email (**@**.** format)</string>
    <string name="error_name">Check your name (only letters allowed)</string>
    <string name="error_email">Check your email (**@**.** format)</string>
</resources>
