<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_light"
            android:gravity="center"
            android:text="@string/user_title"
            android:textColor="@color/black"
            android:textSize="@dimen/app_txt_dimension" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="@dimen/user_choice_padding"
            android:paddingRight="@dimen/user_choice_padding" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/user_choice_marginTop"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_name"
                    android:textSize="@dimen/app_txt_dimension" />

                <EditText
                    android:id="@+id/user_name"
                    style="@style/User_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_name_hint" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/user_choice_marginTop"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_email"
                    android:textSize="@dimen/app_txt_dimension" />

                <EditText
                    android:id="@+id/user_email"
                    style="@style/User_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_name_hint" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/user_choice_marginTop"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/user_choice_padding"
            android:paddingRight="@dimen/user_choice_padding" >

            <Button
                android:id="@+id/btn_investigator"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:drawableBottom="@drawable/investigator"
                android:text="@string/user_role_investigator" />

            <Button
                android:id="@+id/btn_fugitive"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:drawableBottom="@drawable/escapee"
                android:text="@string/user_role_escapee" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>